# vbox

./: .gitignore  Cargo.toml  LICENSE  README.md  main.rs
src/: dashboard.rs  html_renderer.rs  lib.rs  main.rs  shell.rs
src/scheduler/: mod.rs  process.rs  scheduler.rs  task.rs
src/shell/commands/: browse.rs  calc.rs  cat.rs  cd.rs  clearmem.rs  echo_cmd.rs  ls.rs  memory.rs  mkdir.rs  mod.rs  ps.rs  route.rs  touch.rs  vps.rs
src/tests/: integration.rs
src/utils/: logger.rs
src/vfs/: dev.rs  directory.rs  disk.rs  file.rs  filesystem.rs  mod.rs  network.rs  node.rs  proc.rs
src/vps/: instance.rs  manager.rs  mod.rs
