[package]
name = "vbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vbox"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bincode = "1.3.3"
tiny_http = "0.12"
reqwest = { version = "0.12", features = ["blocking"] }
uuid = { version = "1.0", features = ["v4"] }
scraper = "0.19"
